Make sure cmake use python3

--- a/naunet/templates/common/demo.ipynb
+++ b/naunet/templates/common/demo.ipynb
@@ -29,13 +29,13 @@
     "species = summary[\"list_of_species\"]\n",
     "nspec = summary[\"num_of_species\"]\n",
     "\n",
-    "bindata = np.fromfile(f'build/test/evolution_singlegrid.bin', dtype='float64').reshape(-1, nspec+1)\n",
+    "bindata = np.fromfile(f\"build/test/evolution_singlegrid.bin\", dtype=\"float64\").reshape(-1, nspec+1)\n",
     "time = bindata[:, 0]\n",
     "\n",
     "spec = \"H2\"\n",
     "sidx = species.index(spec) + 1\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(facecolor=\"w\")\n",
     "\n",
     "ax.plot(time, bindata[:,sidx]);\n",
     "\n",
@@ -43,6 +43,23 @@
     "ax.set_yscale('log');\n",
     "ax.set_xlabel('Time (yr)');\n",
     "ax.set_ylabel(f'[{spec}]');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elapsed = np.loadtxt(\"build/test/time_singlegrid.txt\")\n",
+    "\n",
+    "fig, ax = plt.subplots(facecolor=\"w\")\n",
+    "\n",
+    "ax.plot(np.arange(elapsed.size), elapsed);\n",
+    "\n",
+    "ax.set_yscale(\"log\");\n",
+    "ax.set_xlabel(\"Step\");\n",
+    "ax.set_ylabel(\"Elapsed Time (s)\");"
    ]
   }
  ],
