Add `source` attribute to reactions, fix bugs

--- a/naunet/templates/base/demo.ipynb
+++ b/naunet/templates/base/demo.ipynb
@@ -29,7 +29,7 @@
     "species = summary[\"list_of_species\"]\n",
     "nspec = summary[\"num_of_species\"]\n",
     "\n",
-    "bindata = np.fromfile(f\"build/test/evolution_singlegrid.bin\", dtype=\"float64\").reshape(-1, nspec+1)\n",
+    "bindata = np.fromfile(f\"build/tests/evolution_singlegrid.bin\", dtype=\"float64\").reshape(-1, nspec+1)\n",
     "time = bindata[:, 0]\n",
     "\n",
     "spec = \"H2\"\n",
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "elapsed = np.loadtxt(\"build/test/time_singlegrid.txt\")\n",
+    "elapsed = np.loadtxt(\"build/tests/time_singlegrid.txt\")\n",
     "\n",
     "fig, ax = plt.subplots(facecolor=\"w\")\n",
     "\n",
@@ -64,10 +64,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.6 ('.venv': poetry)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "314ff8c970d95e799925aa8f25686df887ef025d7910d0eca0a071c657e55e81"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
